@@ -30,6 +30,9 @@ my $FLOAT_MIN = POSIX::FLT_MIN;
 my $DOUBLE_MAX = POSIX::DBL_MAX;
 my $DOUBLE_MIN = POSIX::DBL_MIN;
 
+print STDERR $FLOAT_MAX;
+
+
 # Convert type - floating point narrowing convertion
 {
   ok(SPVM::TestCase::convert_float_to_byte());
