@@ -79,6 +79,15 @@ package TestCase {
     
     return 0;
   }
+  sub convert_double_to_float() : int {
+    my $value = (float)346638529e+38;
+    
+    if ($value == (float)346638529e+38f) {
+      return 1;
+    }
+    
+    return 0;
+  }
   
   # Convert type - floating point widning convertion
   sub convert_byte_to_float() : int {
